<resources>
    <!--  General  -->
    <string name="app_name">EcoSearch</string>
    <string name="please_wait">Please Wait</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>

    <!--  Login  -->
    <string name="login">Login</string>
    <string name="login_email_hint">Enter your email</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <!--  Register  -->
    <string name="register">Register</string>
    <string name="create_an_account">Create an Account</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Conditions</u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_username">Please enter username</string>
    <string name="err_msg_enter_valid_email">Please enter valid email</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Passwords do not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree to our terms and conditions</string>

    <!--  Forgot Password  -->
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_content">Please enter your email here. A mail will be sent to you containing a link to reset your password</string>
    <string name="btn_lbl_send_mail">Send Mail</string>

    <!--  Main Activity  -->
    <string name="title_activity_main">Main Activity</string>

    <!--  Home  -->
    <string name="home_title">Home</string>

    <!--  Records  -->
    <string name="records_title">Records</string>

    <!--  Menu  -->
    <string name="menu_title">Menu</string>

    <!--  Profile  -->
    <string name="profile_title">Edit Profile</string>
    <string name="hint_name">Name</string>
    <string name="btn_update_profile">Update</string>
    <string name="profile_update_success">Profile updated successfully</string>
    <string name="err_msg_enter_name">Please enter name</string>

    <!--  Update Password  -->
    <string name="update_password_title">Update Password</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Current Password</string>
    <string name="current_password_err">Enter current password</string>
    <string name="new_password_err">Enter new password</string>
    <string name="confirm_new_password_err">Confirm new password</string>
    <string name="update_password_success">Password updated!</string>

    <!--  Delete Account  -->
    <string name="delete_account_title">Delete Account</string>
    <string name="delete_account_content">Warning: Once deleted, your account and related records cannot be recovered</string>
    <string name="delete_account_dialog_title">Delete Account?</string>
    <string name="delete_account_dialog">Deleted data cannot be recovered</string>

    <!--  Records Fragment  -->
    <string name="action_add_record">Add a Record</string>
    <string name="action_view_map">View your Map</string>
    <string name="no_records_found">No Records Found</string>

    <!--  Add Record  -->
    <string name="toolbar_add_record_title">Create a New Record</string>
    <string name="add_record_title_hint">Enter title</string>
    <string name="add_record_description_hint">Enter description</string>
    <string name="add_record_type_hint">Choose type</string>
    <string name="insect">Insect</string>
    <string name="plant">Plant</string>
    <string name="animal">Animal</string>
    <string name="bird">Bird</string>
    <string name="use_gallery_permission_denied">Permission to use Gallery denied</string>
    <string name="image_selection_failure">Error loading image from Gallery</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_enter_description">Please enter description</string>
    <string name="err_upload_record_image">Please upload a record image</string>
    <string name="add_record_success">Record successfully added!</string>
    <string name="use_location_permission_denied">Permission to use Location denied</string>
    <string name="err_need_location">Location is required</string>

    <!--  Records Details  -->
    <string name="action_edit_record">Edit Record</string>
    <string name="action_delete_record">Delete Record</string>
    <string name="btn_lbl_identify_image">Identify Image</string>
    <string name="unknown">Unknown</string>
    <string name="go_to_map">Go to Map</string>
    <string name="delete_record_dialog_title">Confirmation</string>
    <string name="delete_record_dialog">Are you sure you want to delete this record?</string>

    <!--  Edit Record  -->
    <string name="edit_record_title">Edit Record</string>
    <string name="title_activity_maps">Map</string>

    <!--  Map Activity  -->
    <string name="map_explore_label">Explore</string>

</resources>