<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aknindustries.ecosearch.fragments.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.aknindustries.ecosearch.fragments.RecordsFragment"
        android:label="@string/records_title"
        tools:layout="@layout/fragment_records" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.aknindustries.ecosearch.fragments.MenuFragment"
        android:label="@string/menu_title"
        tools:layout="@layout/fragment_menu" />
</navigation>