<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.AddRecordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_record_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.aknindustries.ecosearch.widgets.CustomBoldTextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="@dimen/toolbar_title_paddingEnd"
            android:text="@string/toolbar_add_record_title"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/toolbar_title_text_size" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/record_image_frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_record_image_height"
        android:background="@color/colorLightGrey"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_record_activity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/btn_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_camera_alt_24" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_record_til_title"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/add_record_title_hint"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_image_frame">

        <com.aknindustries.ecosearch.widgets.CustomEditText
            android:id="@+id/add_record_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_record_til_description"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/add_record_description_hint"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_record_til_title">

        <com.aknindustries.ecosearch.widgets.CustomEditText
            android:id="@+id/add_record_et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.aknindustries.ecosearch.widgets.CustomTextView
        android:id="@+id/add_record_label_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:padding="@dimen/et_padding"
        android:text="@string/add_record_type_hint"
        android:textAlignment="textStart"
        android:textColor="@color/colorDarkGrey"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_record_til_description" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/add_record_cg_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:paddingHorizontal="20dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/et_textSize"
        app:layout_constraintTop_toBottomOf="@id/add_record_label_type"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_animal"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/animal"
            android:textColor="@color/chip_text_colors"
            app:chipBackgroundColor="@color/chip_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_plant"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/plant"
            android:textColor="@color/chip_text_colors"
            app:chipBackgroundColor="@color/chip_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_insect"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/insect"
            android:textColor="@color/chip_text_colors"
            app:chipBackgroundColor="@color/chip_colors" />

    </com.google.android.material.chip.ChipGroup>

    <com.aknindustries.ecosearch.widgets.CustomButton
        android:id="@+id/btn_add_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_record_cg_type" />

</androidx.constraintlayout.widget.ConstraintLayout>